[package]
name = "common"
description = "Common libraries for cli and agent clients"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
